2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm: Undo, bsd_glob is not exported on older
	  perl

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsdtcp-security.c,
	  common-src/conffile.c,
	  common-src/ssl-security.c,
	  oldrecover-src/extract_list.c,
	  server-src/dumper.c: Fix warning in newer gcc
	* perl/Amanda/Rest/Runs.pm,: Fix warning in newer perl
	* installcheck/Installcheck.pm: Use File::Glob::bsd_glob

2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse subsection name with or without double
	  quote
	* installcheck/Amanda_Config.pl: Test it
	* installcheck/Installcheck/Config.pm: set interactivity after they
	  are defined

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm (process_alive): Can be called a class method
	* perl/Amanda/Util.swg (is_pid_alive): New pname argument, call
	  Amanda::Process::process_alive if pname is set
	* perl/Amanda/Status.pm: Call is_pid_alive with 'driver' as the pname

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Use Amanda::Util::is_pid_alive

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Util.swg (is_pid_alive): Use kill instead of
	  Amanda::Process

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amfeatures.c: Add fe_sendbackup_statedone
	* common-src/amfeatures.h: Add fe_sendbackup_statedone
	* amandad-src/amandad.c, client-src/sendbackup.c,
	  server-src/dumper.c: Fix for directtcp data_path

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Accept define with double quote

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning on taper failure

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Fix error message
	* installcheck/amlabel.pl: Fix
