@@ -1,3 +1,6 @@
+2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/driver.c (tape_action): fix for max_dle_by_volume
+
 2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Rest/Runs.pm: Undo, bsd_glob is not exported on older
 	  perl
